<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="@dimen/layout_width"
        android:layout_height="@dimen/layout_height"
        android:layout_marginStart="@dimen/layout_margin_start"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:layout_marginEnd="@dimen/layout_margin_end"
        android:layout_marginBottom="@dimen/layout_margin_bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_size"
            android:gravity="center"
            android:text="@string/app_title"
            android:textSize="@dimen/title_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/to_yarn_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yarn_main_title"/>
<!--                style="?android:attr/borderlessButtonStyle"/>-->

            <Button
                android:id="@+id/to_toys_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/toys_main_title"/>
<!--                style="?android:attr/borderlessButtonStyle"/>-->
        </LinearLayout>

<!--        TODO: add a frame here for fragments here see #4, slide 120 -->

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>